--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import 'pushin/pushin.css';
+@import 'pushin/dist/pushin.css';
 
 html,
 body {
@@ -11,6 +11,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-weight: bold;
 }
 
 * {
